* hopefully fixed footer overflow on modals for webkit browsers

--- a/client/components/modal/modal.less
+++ b/client/components/modal/modal.less
@@ -35,16 +35,19 @@ modal-backdrop {
 }
 
 modal-wrapper {
-	width: 100vw;
-	height: 100vh;
+
+	position: fixed;
+	
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
 	
 	display: flex;
 	justify-content: flex-start;
 	align-items: center;
-	
-	position: fixed;
-	top: 0;
-	left: 0;
+
+	width: 100%;
 	
 	z-index: @modal-index;
 	
